@@ -1,3 +1,6 @@
+    New feature: QuickAddIssue now shows the spambot prevention if
+    switched on. Real#0343
+    
     Bug fixed: Redirecting out on duplicate status change would cause
     a TypeError. This happens when two people simultaneuously for
     example Take an issue. 
